feat: resolve all new analyzer errors when using dotnet cli 8
feat: Add language version setting

- Added a new language feature in the Yubico.Core.csproj file by setting the LangVersion to the latest version.

refactor: Optimize MultiString.cs

- Modified the GetStrings method in MultiString.cs to use a static char array instead of creating a new char array every time.

fix: Update WindowsHidDevice.cs

- Updated the ResolveIdsFromInstancePath method in WindowsHidDevice.cs to remove the unnecessary call to ToUpperInvariant() method.

update: Update WindowsHidFeatureReportConnection.cs

- Updated the HidDDevice property in WindowsHidFeatureReportConnection.cs to be of type HidDDevice instead of IHidDDevice.

update: Update WindowsHidIOReportConnection.cs

- Updated the HidDDevice property in WindowsHidIOReportConnection.cs to be of type HidDDevice instead of IHidDDevice.

update: Update DesktopSmartCardDevice.cs

- Updated the NewSmartCardDevice method in DesktopSmartCardDevice.cs to return a DesktopSmartCardDevice instance instead of an ISmartCardDevice instance.

update: Update DesktopSmartCardDeviceListener.cs

- Updated the notificationMS variable in DesktopSmartCardDeviceListener.cs to be an array of strings instead of a single string.

feat: Add string extension method

- Added a new extension method named StartsWith to the StringExtensions class.

update: Update LinuxUnmanagedDynamicLibrary.cs

- Updated the OpenLibrary method in LinuxUnmanagedDynamicLibrary.cs to return a SafeLinuxLibraryHandle instead of a SafeLibraryHandle.

update: Update MacOSUnmanagedDynamicLibrary.cs

- Updated the OpenLibrary method in MacOSUnmanagedDynamicLibrary.cs to return a SafeMacOSLibraryHandle instead of a SafeLibraryHandle.

update: Update CmDevice.cs

- Updated the GetDevicePaths method in CmDevice.cs to return an array of strings instead of an IList of strings.

update: Update WindowsUnmanagedDynamicLibrary.cs

- Updated the OpenLibrary method in WindowsUnmanagedDynamicLibra

--- a/Yubico.Core/src/Yubico.Core.csproj
+++ b/Yubico.Core/src/Yubico.Core.csproj
@@ -51,6 +51,9 @@ limitations under the License. -->
     <AssemblyOriginatorKeyFile>..\..\Yubico.NET.SDK.snk</AssemblyOriginatorKeyFile>
 
     <DefineConstants Condition="'$(Configuration)' == 'Debug'">$(DefineConstants);ENABLE_SENSITIVE_LOG</DefineConstants>
+
+    <!-- Language Features -->
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
