--- a/Yubico.YubiKey/tests/sandbox/Yubico.YubiKey.TestApp.csproj
+++ b/Yubico.YubiKey/tests/sandbox/Yubico.YubiKey.TestApp.csproj
@@ -31,6 +31,8 @@ limitations under the License. -->
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\..\Yubico.NET.SDK.snk</AssemblyOriginatorKeyFile>
     <StartupObject>Yubico.YubiKey.TestApp.Program</StartupObject>
+
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
